# kiln

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  Cargo.toml  README.md  config.toml  cspell.json
.claude/: settings.json
.claude/plans/: config-driven-taxonomies.md
.cspell/: words.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/kiln/: Cargo.toml
crates/kiln/src/: build.rs  config.rs  content.rs  convert.rs  directive.rs  feed.rs  html.rs  i18n.rs  init.rs  lib.rs  main.rs  markdown.rs  minify.rs  output.rs  pagination.rs  render.rs  search.rs  section.rs  serve.rs  sitemap.rs  taxonomy.rs  template.rs  test_utils.rs  text.rs
crates/kiln/src/content/: discovery.rs  frontmatter.rs  page.rs
crates/kiln/src/convert/: frontmatter.rs  shortcode.rs
crates/kiln/src/directive/: admonition.rs  callout.rs  div.rs  parser.rs
crates/kiln/src/render/: assets.rs  emoji.rs  highlight.rs  icon.rs  image.rs  image_attrs.rs  markdown.rs  mermaid.rs  pipeline.rs  toc.rs
crates/kiln/src/template/: vars.rs
docs/: content.md  roadmap.md  syntax.md  themes.md
templates/: base.html  post.html
