[workspace]
members = ["crates/kiln"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hakula <i@hakula.xyz>"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indoc = "2"
jiff = { version = "0.2", features = ["serde"] }
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "html",
  "regex-onig",
] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
  "ansi",
] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
