[package]
name = "kiln"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A custom static site generator"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
jiff = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
syntect = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tempfile = "3"
