[package]
name = "kiln"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A custom static site generator"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
gh-emoji = { workspace = true }
http-body-util = { workspace = true }
indoc = { workspace = true }
jiff = { workspace = true }
lightningcss = { workspace = true }
minify-html = { workspace = true }
minijinja = { workspace = true }
notify = { workspace = true }
open = { workspace = true }
oxc_allocator = { workspace = true }
oxc_codegen = { workspace = true }
oxc_minifier = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
syntect = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
two-face = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = "3"
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
